# flow-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: ci.yml
fresh_flow/: IMPLEMENTATION_GUIDE.md  MAIN_INSTRUCTION.md  auth-hang-diagnosis.md  flow_image_server.py  generate.py  linux-arm64-xvfb-setup.md
src/flow_mcp/: __init__.py  __main__.py  account_manager.py  auth.py  browser.py  browser_pool.py  chrome_helpers.py  constants.py  generator.py  js_templates.py  profile.py  recaptcha.py  server.py
tests/: test_flow_mcp.py
