[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flow-mcp"
version = "0.1.0"
description = "Google Flow image generation as an MCP tool for Claude Code"
readme = "README.md"
license = { text = "MIT" }
keywords = ["mcp", "claude", "google-flow", "image-generation", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "playwright>=1.40.0",
    "structlog>=24.0.0",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5.0",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/alarconcesar/flow-mcp"
Repository = "https://github.com/alarconcesar/flow-mcp.git"
Issues = "https://github.com/alarconcesar/flow-mcp/issues"

[project.scripts]
flow-mcp = "flow_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/flow_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/pyproject.toml",
    "/LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
strict = false
python_version = "3.11"
ignore_missing_imports = true
